# Face-Cartooniztion

./: .gitignore  README.md  eyeloc.py  eyetest.ipynb  left_eye_asef.npy  playground.ipynb  pyproject.toml  right_eye_asef.npy  setup.cfg  society.ipynb
EyeLocator/: eyeloc.py  eyetest.ipynb  lazyarray.py  train.py
EyeLocator/results/: left_eye_asef.npy  mouth_asef.npy  nose_asef.npy  right_eye_asef.npy
Facial-Feature-Extractor/: commonfunctions.py  copier.py  eyetest.ipynb  ffextractor.py  filters.py  lazyarray.py  main.py  process-dataset.py  static_filter_test.ipynb  test.ipynb  test.py  train.py
Facial-Feature-Extractor/results/: left_eye_asef.npy  mouth_asef.npy  nose_asef.npy  right_eye_asef.npy
ViolaJones/: AdaBoost.py  HaarLikeFeatures.py  ViolaJones.py  commonfunctions.py  cvj_weights_data_set_2_0_100_5000_50501_40.pkl  cvj_weights_data_set_2_0_100_5000_5080[40].pkl  cvj_weights_data_set_2_0_3000_5000_53001_10.pkl  cvj_weights_data_set_2_0_3000_5000_53001_40.pkl  cvj_weights_data_set_2_0_3200_5000_8200[40].pkl  cvj_weights_data_set_2_0_5_5000_5005[40].pkl  cvj_weights_data_set_2_400_600_5100_5180[40].pkl  haar_feature.py  haar_utils.py  main.ipynb  main_copy.ipynb  rectangle_region.py  train.py  util.py  weakclassifier.py
